added Agent name field

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -6,6 +6,9 @@
 }
 
 /*general*/
+body {
+    background-color: #000000;
+}
 .code-generator-section {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ffffff;
